[package]
name = "databento-mbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbn = { git = "https://github.com/databento/dbn.git", tag = "v0.5.1" }
tom_orderbook = { path = "../" }
market_datatypes = { path = "../market_datatypes" }
